[gd_scene load_steps=7 format=3 uid="uid://3x2shnlrfuiy"]

[ext_resource type="Script" path="res://World Scene/Items/WaterBottleSpecial.gd" id="1_axk8x"]
[ext_resource type="Texture2D" uid="uid://dsuqdcls077ih" path="res://Assets/Custom/Items/WaterBottleSpecial.png" id="2_m5lri"]
[ext_resource type="Texture2D" uid="uid://bpl17gwn3b6ye" path="res://Assets/Custom/Light.png" id="3_oj0er"]
[ext_resource type="Texture2D" uid="uid://d0rtr7ojbum5p" path="res://Assets/Custom/Shadow.png" id="4_5ek30"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vukrq"]
size = Vector2(10, 17.8)

[sub_resource type="SpriteFrames" id="SpriteFrames_5gstm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m5lri")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="WaterBottleSpecial" type="Area2D"]
z_index = 1
script = ExtResource("1_axk8x")

[node name="WaterBottleSpecialCollisionShape" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(2.38419e-07, -0.250001)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_vukrq")

[node name="WaterBottleSpecialSprite" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(2.98023e-06, 0)
scale = Vector2(1.5, 1.65)
sprite_frames = SubResource("SpriteFrames_5gstm")

[node name="ShadowRealm" type="PointLight2D" parent="."]
z_index = 21
texture_filter = 1
position = Vector2(0, -1)
scale = Vector2(2, 2)
color = Color(1, 0.760784, 0.584314, 1)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 3.0
texture = ExtResource("3_oj0er")
texture_scale = 0.5

[node name="Shadow" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -15.0
offset_top = 1.0
offset_right = 15.0
offset_bottom = 19.0
texture = ExtResource("4_5ek30")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
